--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "04-tareas-app",
   "version": "1.1.0",
   "description": "",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
